--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ p{
     height: 50px;
     justify-content: space-around;
     align-items: center;
-    border: 1px white solid;
 }
 .right-section{
     display: flex;
@@ -37,7 +36,7 @@ p{
     display: flex;
     flex-direction: column;
     width: 300px;
-    height: 150px;
+    height: 180px;
 }
 .title{
     font-size: 42px;
@@ -46,4 +45,30 @@ p{
 }
 .paragraph{
     color: #e5e7eb;
+}
+.btn{
+    background-color:  #3882f6;
+    border:none;
+    width: 70px;
+    color: white;
+    padding: 0;
+    height:25px;
+    border-radius: 4px;
+    margin-top: 5px;
+}
+.middle1{
+    display: flex;
+    flex-direction: column;
+    height: 250px;
+    align-items: center;
+}
+.middle-title{
+    font-size: 36px;
+    font-weight: bold;
+    color: #1f2937;
+}
+.frame-container{
+    display: flex;
+    flex: 1;
+    
 }
