--- a/style.css
+++ b/style.css
@@ -110,3 +110,39 @@ body{
     width: 200px;
     padding-left: 410px;
 }
+.middle3{
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.contact-box{
+    width: 850px;
+    height: 120px;
+    background-color: #3882f6;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
+    border-radius: 4px;
+}
+.contact-title{
+    font-size: 17px;
+    font-weight: bold;
+}
+.contact-btn{
+    border: 2px solid white;
+    border-radius: 4px;
+    background-color: #3882f6;
+    color: white;
+    padding: 5px 15px 5px 15px;
+}
+.footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 70px;
+    background-color: #1f2937;
+    color: white;
+    font-size: 14px;
+}
